# taskriptor-web

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/app/: database.py  main.py  models.py  prestart.sh  urls.py
app/migrations/: env.py
app/migrations/versions/: 7a7f756a6e91_add_users_and_event_tables.py
