[tool.poetry]
name = "taskriptor"
version = "0.1.0"
description = ""
authors = ["nasuka <nasuka_s@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.53.2"
uvicorn = "^0.11.3"
sqlalchemy = "^1.3.15"
PyMySQL = "^0.9.3"
python-dotenv = "^0.12.0"
alembic = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
